--- a/HabitTracker/app/src/main/AndroidManifest.xml
+++ b/HabitTracker/app/src/main/AndroidManifest.xml
@@ -18,10 +18,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".UserprofileActivity"
+            android:exported="false" />
+        <activity
             android:name=".NewsfeedActivity"
             android:exported="false" />
         <activity
-            android:name=".HabitGoalActivity2"
+            android:name=".HabitgoalActivity2"
             android:exported="false" />
         <activity
             android:name=".HabitgoalActivity"
